# ai-game-company-server

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: api_worker.py  backup_db.py  command_safety.py  config.py  context_compaction.py  db.py  discord_bot.py  discord_gateway.py  discord_setup.py  discord_threads.py  git_merge.py  git_workspace.py  main.py  merge_policy.py  owner_runner.py  owner_task_validator.py  project_template.py  repository.py  schemas.py  seed.py  test_runner.py  test_runner_report.py  test_runner_worker.py  worker_runner.py  worker_supervisor.py  workspace_worker.py
config/: machines.example.json
docs/: ARCHITECTURE_BLUEPRINT.md  CONTEXT_COMPACTION.md  CONTEXT_HANDOFF.md  COPYRIGHT_REGISTRATION_PREP.md  DISCORD_BOT_SETUP.md  DISCORD_OPERATOR_CONSOLE.ko.md  DISCORD_OPERATOR_CONSOLE.md  FIRST_GAME_TASK_TEMPLATES.md  FIRST_PORTFOLIO_GAME_PLAN.md  FIRST_PORTFOLIO_GAME_RESUMPTION_PROMPT.md  FIRST_PORTFOLIO_GAME_SEED_DRAFT.md  GAME_PROJECT_TEMPLATE.md  GAME_README_DRAFT.md  GOLDEN_PATH.md  HARDWARE_ENVIRONMENT.md  LONG_TERM_PROJECT_MEMORY.ko.md  LONG_TERM_PROJECT_MEMORY.md  MCP_EXTENSION_PLAN.md  NEXT_ANTIGRAVITY_TASK.md  OWNER_TASK_PLANNING.md  PRODUCT_VISION.md  README.ko.md  ROADMAP.md  SERVER_CONFIGURATION.md  SERVER_CONFIGURATION_DECISIONS.ko.md  SERVER_CONFIGURATION_DECISIONS.md  SERVER_FEATURE_VALIDATION_MATRIX.md  TEST_RUNNER_CONTRACT.md  TODO_LIST.md  V1_5_ROADMAP.md  V1_DESIGN.md  V1_PORTFOLIO_GAME_READINESS.md  V1_SMOKE_TEST.md  VISUAL_TOOL_INTEGRATION.md  WORKER_REGISTRY_AND_SCHEMA.ko.md  (+1 more)
(+87 files in other folders)
