[project]
name = "ai-game-company-server"
version = "0.1.0"
description = "MVP server for an AI game development company workflow."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
